# teste_otimizacao_demanda

./: .gitignore  README.md  pyproject.toml
src/: 1_Baseline.py  backend.py  contrato.py  frontend.py
src/pages/: 2_Consolidador.py  3_Documentação.py
