[tool.poetry]
name = "teste-demanda"
version = "0.1.0"
description = ""
authors = ["Ismael <ismaelhenriqueeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
pydantic = "^2.8.2"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
streamlit = "^1.37.0"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
